--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-    background: #aed9fa;
+    background: #1a202c;
 }
 .nav-wrapper {
     background-color: #009688;
